added the table of academic Backgroung

--- a/monblog.html
+++ b/monblog.html
@@ -18,6 +18,31 @@
 				<li> Diplome de professeur de l'enseignement secondaire Second grade <b> De 2017 à 2018</b> </li> 
 				<li> Diplome d'ingénieur de l'EAMAC Option ELECTRONIQUE INFORMATIQUE <b> De 2013 à 2017 </b></li>
 			</ul>
+			<h2> Formations Académiques </h2>
+			<table>
+				<tr>
+					<td> formation </td>
+					<td> Année académique </td>
+				</tr>
+				<tr>
+					<td> Diplome de Professeur d'enseignement secondaire 2nd Grade</td>
+					<td> De 2017 à 2019 </td>
+				</tr>
+
+				<tr>
+					<td> Diplome d'ingénieur de l'EAMAC</td>
+					<td> De 2013 à 2017 </td>
+				</tr>
+				<tr>
+					<td> Diplome de Professeur d'enseignement secondaire 1er Grade</td>
+					<td> De 2008 à 2012 </td>
+				</tr>
+				<tr>
+					<td> Baccalauréat C</td>
+					<td> De 2016 à 2017 </td>
+				</tr>
+
+			</table>
 		</div>
 		
 
