Added competence to my cv

--- a/monblog.html
+++ b/monblog.html
@@ -8,15 +8,16 @@
 		<div>
 			
 			<h1> <span> INGENIEUR ET PROFESSEUR</span></h1>
+			<p>je suis un Professeur de physiques formé à l'école normale supérieure de Maroua au Cameroun mais aussi il est un Ingénieur diplomé de l'EAMAC de Niamey au Niger</p>
 		</div>
 		<div>
-			<p>vivien est un Professeur de physiques formé à l'école normale supérieure de Maroua au Cameroun mais aussi il est un Ingénieur diplomé de l'EAMAC de Niamey au Niger</p>
+			<img src="photoprofil.jpg">
 		</div>
 		<div>
-			<h2> CV de Bogne Tienoue Vivien</h2>
+			<h2> Mes compétences </h2>
 			<ul>
-				<li> Diplome de professeur de l'enseignement secondaire Second grade <b> De 2017 à 2018</b> </li> 
-				<li> Diplome d'ingénieur de l'EAMAC Option ELECTRONIQUE INFORMATIQUE <b> De 2013 à 2017 </b></li>
+				<li> Disponibilité IMMEDIATE de ma personne pour un travail partout dans le monde : dans un délai d’une semaine après signature du contrat </li> 
+				<li> Developpeur Web maitrisant les technologies: <strong> Git ; HTML5 et CSS3 ; Flask ; SQL ; Javascript ; Django </strong></b></li>
 			</ul>
 			<h2> Formations Académiques </h2>
 			<table>
