--- a/monblog.html
+++ b/monblog.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html>
-	<head><
+	<head>
 	<title>Bienvenue au Blog de Vivien</title>
 	</head>
-	<body>
+	<body style="background-image: url(photoprofil.jpg) ;background-repeat: no-repeat; background-position: right top">
 		
 		<div>
 			
 			<h1> <span> INGENIEUR ET PROFESSEUR</span></h1>
+			<form> 
+				<input type="text" placeholder="Votre nom" name="name">
+				<button>Me contacter</button>
+			</form>
 			<p>je suis un Professeur de physiques formé à l'école normale supérieure de Maroua au Cameroun mais aussi il est un Ingénieur diplomé de l'EAMAC de Niamey au Niger</p>
+
 		</div>
 		<div>
-			<img src="photoprofil.jpg">
+			<img src="photoprofil.jpg" width="10%">
 		</div>
 		<div>
 			<h2> Mes compétences </h2>
@@ -22,8 +27,8 @@
 			<h2> Formations Académiques </h2>
 			<table>
 				<tr>
-					<td> formation </td>
-					<td> Année académique </td>
+					<th> formation </th>
+					<th> Année académique </th>
 				</tr>
 				<tr>
 					<td> Diplome de Professeur d'enseignement secondaire 2nd Grade</td>
