--- a/monblog.html
+++ b/monblog.html
@@ -2,22 +2,19 @@
 <html>
 	<head>
 	<title>Bienvenue au Blog de Vivien</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
-	<body style="background-image: url(photoprofil.jpg) ;background-repeat: no-repeat; background-position: right top">
+	<body>
 		
 		<div>
 			
-			<h1> <span> INGENIEUR ET PROFESSEUR</span></h1>
-			<form> 
-				<input type="text" placeholder="Votre nom" name="name">
-				<button>Me contacter</button>
-			</form>
+			<h1> <span> INGENIEUR ET PROFESSEUR</span>
+
+			</h1>
 			<p>je suis un Professeur de physiques formé à l'école normale supérieure de Maroua au Cameroun mais aussi il est un Ingénieur diplomé de l'EAMAC de Niamey au Niger</p>
 
 		</div>
-		<div>
-			<img src="photoprofil.jpg" width="10%">
-		</div>
+
 		<div>
 			<h2> Mes compétences </h2>
 			<ul>
@@ -49,6 +46,10 @@
 				</tr>
 
 			</table>
+			<form> 
+				<input type="text" placeholder="Votre nom" name="name">
+				<button>Me contacter</button>
+			</form>
 		</div>
 		
 
