transformation de la barre de navigation en liste

--- a/monblog.html
+++ b/monblog.html
@@ -5,7 +5,23 @@
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
 	<body>
-		
+		<header> 
+			<ul>
+				<li class="moncv"> Compétences </li>
+			<li class="moncv"> Formations/Diplomes </li>
+			<li class="moncv"	> Parcours professionnel </li>
+				
+			</ul>
+
+		</header>
+		<nav>
+			<div> Compétences </div>
+			<div> Formations/Diplomes </div>
+			<div> Parcours professionnel </div>
+			
+		</nav>
+		<section>
+
 		<div>
 			
 			<h1> <span> INGENIEUR ET PROFESSEUR</span>
@@ -51,8 +67,9 @@
 				<button>Me contacter</button>
 			</form>
 		</div>
-		
+					
+		</section>
 
 
 	</body>
-</html>
+</html>+
